@@ -385,6 +385,35 @@
 )
 
 
+;; test subst
+(define tree1 nil)
+(tests subst
+  (setq tree1 '(1 (1 2) (1 2 3) (1 2 3 4))) =>  (1 (1 2) (1 2 3) (1 2 3 4))
+  (subst "two" 2 tree1) =>  (1 (1 "two") (1 "two" 3) (1 "two" 3 4))
+  (subst "five" 5 tree1) =>  (1 (1 2) (1 2 3) (1 2 3 4))
+;  (eq tree1 (subst "five" 5 tree1)) =>  implementation-dependent
+  (subst 'tempest 'hurricane
+         '(shakespeare wrote (the hurricane)))
+  =>  (SHAKESPEARE WROTE (THE TEMPEST))
+  (subst 'foo 'nil '(shakespeare wrote (twelfth night)))
+  =>  (SHAKESPEARE WROTE (TWELFTH NIGHT . FOO) . FOO)
+  (subst '(a . cons) '(old . pair)
+         '((old . spice) ((old . shoes) old . pair) (old . pair))
+         #-murmel :test #'equal)
+  =>  ((OLD . SPICE) ((OLD . SHOES) A . CONS) (A . CONS))
+
+  (subst-if 5 #'listp tree1) =>  5
+;  (subst-if-not '(x) #'consp tree1)  =>  (1 X)
+
+  tree1 =>  (1 (1 2) (1 2 3) (1 2 3 4))
+  (nsubst 'x 3 tree1 #-murmel :test #'eql #-murmel :key #'(lambda (y) (and (listp y) (caddr y))))
+  =>  (1 (1 2) X X)
+  tree1 =>  (1 (1 2) X X)
+
+  (nsubst-if 'Y (lambda (x) (eql x 'x)) tree1) -> (1 (1 2) Y Y)
+)
+
+
 ;; test nconc
 (define y nil)
 (define bar nil)
